
@startuml
'https://plantuml.com/class-diagram
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


<font color=Black size=15><b>Built by WeByte ©</font>
endheader
title <b>US8 - Class Diagram\n

' ======= classes =========

class LaboratoryUI

class Company {
  -designation
  +getLaboratoryStore()
  +getTestTypeStore()
}
class LaboratoryStore {
   +createNewLaboratory(nameOfLaboratory, ID, address, phoneNumber, TIN,typesOfTest)
   +validateLaboratory(lab)
   +saveLaboratory(lab)
   +addLaboratory(lab)
}
class TestTypeStore{
    +getTests()
}
class Laboratory {
      -nameOfLaboratory
      -ID
      -address
      -phoneNumber
      -TIN
      -typesOfTest
      Laboratory(nameOfLaboratory, ID, address, phoneNumber, TIN,typesOfTest)


}
class TestType{
   -designation
   +TestType(designation)
}
class LaboratoryController{
   +createLaboratory(nameOfLaboratory, typesOfTestList, nameOfClinic, ID, address, phoneNumber, TIN)
   +saveLaboratory()
}
class LaboratoryStore
LaboratoryUI ...> LaboratoryController
LaboratoryController ...> Company
LaboratoryController ..> LaboratoryStore
LaboratoryController ..> TestTypeStore
Company "1" ----> "1" LaboratoryStore : "uses"
Company "1" ----> "1" TestTypeStore : "uses"
LaboratoryStore "1" ----> "*" Laboratory : "creates"
TestTypeStore "1" ----> "*" TestType : "conducts"

@enduml